src/adapters/declarative/terraform-templates/vpc-template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Chiral-generated VPC with CloudFormation state management",
  "Parameters": {
    "VpcCidr": {
      "Type": "String",
      "Description": "CIDR block for VPC"
    }
  },
  "Resources": {
    "VirtualPrivateCloud": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": { "Ref": "VpcCidr" },
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "Tags": {
          "Name": { "Ref": "AWS::StackName" },
          "Environment": { "Ref": "Environment" }
        }
      }
    },
    "PublicSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VirtualPrivateCloud" },
        "CidrBlock": { "Fn::Sub": "10.0.1.0/24", { "Fn::GetAtt": ["VirtualPrivateCloud", "CidrBlock"] } },
        "AvailabilityZone": { "Fn::Select": [ { "Fn::GetAZs": "" }, "0", "0" ] },
        "MapPublicIpOnLaunch": true,
        "Tags": {
          "Name": { "Fn::Sub": [ { "Ref": "AWS::StackName" }, "-public" ] }
        }
      }
    },
    "PrivateSubnet1": {
      "Type": "AWS::EC2::Subnet", 
      "Properties": {
        "VpcId": { "Ref": "VirtualPrivateCloud" },
        "CidrBlock": { "Fn::Sub": "10.0.2.0/24", { "Fn::GetAtt": ["VirtualPrivateCloud", "CidrBlock"] } },
        "AvailabilityZone": { "Fn::Select": [ { "Fn::GetAZs": "" }, "0", "0" ] },
        "MapPublicIpOnLaunch": false,
        "Tags": {
          "Name": { "Fn::Sub": [ { "Ref": "AWS::StackName" }, "-private-1" ] }
        }
      }
    },
    "PrivateSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VirtualPrivateCloud" },
        "CidrBlock": { "Fn::Sub": "10.0.3.0/24", { "Fn::GetAtt": ["VirtualPrivateCloud", "CidrBlock"] } },
        "AvailabilityZone": { "Fn::Select": [ { "Fn::GetAZs": "" }, "1", "1" ] },
        "MapPublicIpOnLaunch": false,
        "Tags": {
          "Name": { "Fn::Sub": [ { "Ref": "AWS::StackName" }, "-private-2" ] }
        }
      }
    },
    "PrivateSubnet3": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VirtualPrivateCloud" },
        "CidrBlock": { "Fn::Sub": "10.0.4.0/24", { "Fn::GetAtt": ["VirtualPrivateCloud", "CidrBlock"] } },
        "AvailabilityZone": { "Fn::Select": [ { "Fn::GetAZs": "" }, "2", "2" ] },
        "MapPublicIpOnLaunch": false,
        "Tags": {
          "Name": { "Fn::Sub": [ { "Ref": "AWS::StackName" }, "-private-3" ] }
        }
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": {
          "Name": { "Fn::Sub": [ { "Ref": "AWS::StackName" }, "-igw" ] }
        }
      }
    },
    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VirtualPrivateCloud" },
        "Tags": {
          "Name": { "Fn::Sub": [ { "Ref": "AWS::StackName" }, "-public-rt" ] }
        }
      }
    },
    "PrivateRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VirtualPrivateCloud" },
        "Tags": {
          "Name": { "Fn::Sub": [ { "Ref": "AWS::StackName" }, "-private-rt" ] }
        }
      }
    },
    "PublicRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "PublicRouteTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": { "Ref": "InternetGateway" }
      }
    },
    "VPCGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": { "Ref": "VirtualPrivateCloud" },
        "InternetGatewayId": { "Ref": "InternetGateway" }
      }
    },
    "PublicSubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnet" },
        "RouteTableId": { "Ref": "PublicRouteTable" }
      }
    },
    "PrivateSubnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PrivateSubnet1" },
        "RouteTableId": { "Ref": "PrivateRouteTable" }
      }
    },
    "PrivateSubnet2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PrivateSubnet2" },
        "RouteTableId": { "Ref": "PrivateRouteTable" }
      }
    },
    "PrivateSubnet3RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PrivateSubnet3" },
        "RouteTableId": { "Ref": "PrivateRouteTable" }
      }
    },
    "ElasticIP": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": {
          "Name": { "Fn::Sub": [ { "Ref": "AWS::StackName" }, "-eip" ] }
        }
      }
    },
    "NATGateway": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": { "Ref": "ElasticIP" },
        "SubnetId": { "Ref": "PrivateSubnet1" },
        "Tags": {
          "Name": { "Fn::Sub": [ { "Ref": "AWS::StackName" }, "-nat" ] }
        }
      }
    },
    "DefaultPrivateRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "PrivateRouteTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "NATGateway" }
      }
    }
  },
  "Outputs": {
    "VPCId": {
      "Description": "VPC ID",
      "Value": { "Ref": "VirtualPrivateCloud" },
      "Export": {
        "Name": { "Fn::Sub": [ { "Ref": "AWS::StackName" }, "-VPCID" ] }
      }
    },
    "PublicSubnetIds": {
      "Description": "Public subnet IDs",
      "Value": { "Fn::Join": [ ",", [ { "Ref": "PublicSubnet" }, { "Ref": "PrivateSubnet1" }, { "Ref": "PrivateSubnet2" }, { "Ref": "PrivateSubnet3" } ] }
    },
    "PrivateSubnetIds": {
      "Description": "Private subnet IDs", 
      "Value": { "Fn::Join": [ ",", [ { "Ref": "PrivateSubnet1" }, { "Ref": "PrivateSubnet2" }, { "Ref": "PrivateSubnet3" } ] }
    }
  }
}
